Flash Buttons and Level Up

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="btn yellow" type="button"></div>
         </div>
         <div class="line2">
-            <div class="btn green" type="button"></div>
+            <div class="btn blue" type="button"></div>
             <div class="btn purple" type="button"></div>
         </div>
     </div>
